# robokit_ssl2017

./: .gitignore  CMakeLists.txt  GPATH  README.md
cmake/: CMakeLogging.cmake  DefaultIncludes.cmake  SetOutputDirectory.cmake  rbkConfig.cmake
plugins/: CMakeLists.txt
plugins/SSLGuiDebuger/: CMakeLists.txt
plugins/SSLGuiDebuger/src/: CMakeLists.txt  SSLGuiDebugger.cpp  SSLGuiDebugger.h  net_gui.h
plugins/SSLRadio/: CMakeLists.txt  SSL-USER.doc
plugins/SSLRadio/src/: CMakeLists.txt  RadioPackets.cpp  RadioPackets.h  SSLRadio.cpp  SSLRadio.h
plugins/SSLRefereeBox/: .gitignore  CMakeLists.txt
plugins/SSLRefereeBox/src/: CMakeLists.txt  SSLRefereeBox.cpp  SSLRefereeBox.h
plugins/SSLSimulator/: CMakeLists.txt
plugins/SSLSimulator/src/: CMakeLists.txt  SSLSimulator.cpp  SSLSimulator.h  server.h
plugins/SSLStrategy/: CMakeLists.txt
plugins/SSLStrategy/src/: CMakeLists.txt  SSLStrategy.cpp  SSLStrategy.h
plugins/SSLStrategy/src/LuaModule/: LuaModule.cpp  bestalg.pkg  defendutils.pkg  defpos2013.pkg  gdebugengine.pkg  global.pkg  lua_zeus.cpp  supportpos.pkg  ttsengine.pkg  visionmodule.pkg  worldmodel.pkg  zeus.pkg
plugins/SSLStrategy/src/ssl/: ActionModule.cpp  BallPredictor.cpp  BallPredictor.h  BallSpeedModel.cpp  BallSpeedModel.h  BallStatus.cpp  BallStatus.h  BestPlayer.cpp  CMmotion.cpp  CMmotion.h  CollisionSimulator.cpp  Compensate.cpp  Compensate.h  ContactChecker.h  ControlModel.cpp  CornerAreaPos.cpp  DecisionModule.cpp  DecisionModule.h  DefPos2013.cpp  DefPos2013.h  DefPos2015.cpp  DefendUtils.cpp  DefendUtils.h  FreeKickUtils.cpp  FreeKickUtils.h  GDebugEngine.cpp  GDebugEngine.h  Global.cpp  Global.h  GoaliePosV1.cpp  KickDirection.cpp  KickDirection.h  KickStatus.h  MarkingPosV2.cpp  NormalPlayUtils.cpp  OptionModule.cpp  OptionModule.h  PenaltyPosCleaner.cpp  PlayInterface.cpp  PlayerCommand.h  (+29 more)
plugins/SSLStrategy/src/ssl/bayes/: BayesReader.cpp
plugins/SSLStrategy/src/ssl/defence/: DefenceInfo.cpp  DefenceInfo.h  OppAttributesFactory.cpp  OppPlayer.h  OppRoleFactory.cpp  OppRoleMatcher.cpp  Trigger.cpp  Trigger.h
plugins/SSLStrategy/src/ssl/skill/: AdvanceBallV2.cpp  AdvanceBallV2.h  ChaseKickV1.cpp  ChaseKickV2.cpp  ChaseKickV2.h  CircleAndPass.cpp  DriftKick.cpp  Factory.cpp  Factory.h  GetBallV3.cpp  GoAndTurnKick.cpp  GoAndTurnKickV3.cpp  GoAvoidShootLine.cpp  Goalie2013.cpp  Goalie2015Hefei.cpp  Goalie2015Hefei.h  GotoPosition.cpp  InterceptBallV2.cpp  InterceptBallV3.cpp  InterceptBallV4.cpp  Marking.cpp  Marking.h  MarkingFront.cpp  MarkingTouch.cpp  OpenSpeed.cpp  PenaltyDefV2.cpp  PenaltyGoalie2012.cpp  PenaltyKick2014.cpp  PlayBook.cpp  PlayBook.h  PlayerTask.h  ReceivePass.cpp  ShootBall.cpp  ShootBall.h  ShootBallV2.cpp  ShootBallV2.h  ShootoutGoalie.cpp  ShootoutGoalie.h  ShootoutGoalieV2.cpp  SlowGetBall.cpp  (+7 more)
plugins/SSLStrategy/src/ssl/tinyxml/: ParamReader.cpp
plugins/SSLVisionFuser/: CMakeLists.txt
plugins/SSLVisionFuser/src/: CMakeLists.txt  SSLVisionFuser.cpp  SSLVisionFuser.h  dataqueue.hpp  params.h  singleton.hpp
plugins/SSLVisionFuser/src/follow/: BallFollow.cpp  GlobalData.cpp  GlobalData.h  RobotFollow.cpp  Transmit.cpp  Transmit.h  TwoCameraMixer.cpp  TwoCameraMixer.h  message.h
src/robokit/: config.h
src/robokit/algorithm/: cubic_bezier_new.h
src/robokit/algorithm/20170522/: cubic_bezier.h
src/robokit/algorithm/bc_pathplan/: bgl_topology.h  cubic_bezier.h
src/robokit/algorithm/bc_pathplan/new_bb/: cubic_bezier.h
src/robokit/algorithm/dwa/: dynamic_window_approach.h  dynamic_window_approach_old.h
src/robokit/algorithm/quadtree_pathplan/: elastic_band.h  quadtree_pathplanner.h
src/robokit/algorithm/ray_trace/: laser_utils.h  ray_trace.h
src/robokit/algorithm/teb/: teb_utils.h
src/robokit/algorithm/teb/teb_local_planner/: distance_calculations.h  obstacles.h  optimal_planner.h  planner_interface.h  pose_se2.h  robot_footprint_model.h  teb_config.h  timed_elastic_band.h  timed_elastic_band.hpp  visualization.h  visualization.hpp
src/robokit/algorithm/teb/teb_local_planner/g2o_types/: edge_acceleration.h  edge_dynamic_obstacle.h  edge_kinematics.h  edge_obstacle.h  edge_time_optimal.h  edge_velocity.h  edge_via_point.h  vertex_pose.h
src/robokit/core/: chrono.h  event.h  filesystem.h  json.h  loader.h  lua_reader.h  param.h  rbk_core.h  record_message.pb.h  recorder.h  runtime_data_db.h  thread_pool.h
src/robokit/foundation/quadtree/: quadtree.h
src/robokit/foundation/utils/: geo_utils.h  matrix_3x3.h  min_max.h  quad_word.h
src/robokit/utils/: compress.h
src/robokit/utils/code/: base64.h
src/robokit/utils/tcp/: tcp_client.h
src/robokit/utils/udp/: udp_client.h
thirdparty_libs/luawrapper/: luawapper.h
thirdparty_libs/sqlite3pp/: sqlite3pp.h  sqlite3pp.ipp
